--- a/aplikasi_tempat_wisata/pubspec.yaml
+++ b/aplikasi_tempat_wisata/pubspec.yaml
@@ -63,7 +63,7 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  #fonts:
+  fonts:
     - family: Staatliches
       fonts:
         - asset: fonts/Staatliches-Regular.ttf
